_sass/_partials/_modules.scss
.information-section .heading-separator {
  border-width: 2px;
  border-style: solid;
  width: 80px;
}

.text-right .heading-separator {
  margin: 10px 0 10px auto;
}

.text-left .heading-separator {
  margin: 10px auto 10px 0;
}

@media screen and (max-width: $screen-xs-max) {
  .text-left .heading-separator, .text-right .heading-separator {
    margin: 10px auto;
  }
}

.dark-bg {
  h2 {
    color: white;
  }
  color: white;
}

.bright-bg {

  color: $dark-p-color;

  h2 {
    color: $dark-h2-header-color;
  }

  .heading-separator {
    border-color: $dark-h2-header-color;
  }
}

.information-section {
  padding: 50px 0 50px 0;
  min-height: 400px;
  display: flex;

  a {
    width: 270px;
    height: 40px;
    font-size: 20px;
    line-height: 26px;
  }

  .information-icon {
    width: 80%;
    @media screen and (min-width: $screen-md-max) {
      width: 65%;
    }
  }

  @media screen and (max-width: $screen-xs-max) {
    text-align: center;
    min-height: inherit;
    padding: 20px 0 40px 0;
  }
}

.separator-line-canvas {
  position: absolute;
  $canvas-side-offset: -11px;

  &.canvas-what-is-iaeste {
    top: 58px;
    left: $canvas-side-offset;
  }

  &.canvas-top-left {
    top: 26px;
    left: $canvas-side-offset;
  }

  &.canvas-top-right {
    top: 26px;
    right: $canvas-side-offset;
    @include scaleX(-1);
  }

  &.canvas-bottom-left {
    bottom: -5px;
    left: $canvas-side-offset;
    @include scaleY(-1);
  }

  &.canvas-bottom-right {
    bottom: -5px;
    right: $canvas-side-offset;
    @include scale(-1, -1);
  }
}

